fix :  캠페인 카테고리 별 결제 내역 조회 - 결제 내역 정렬, request category null 값일 때 캠페인에 설정 된 통화로 적용하도록 수정